# frisquet-connect

./: .gitignore  Cargo.toml  README.md  config.toml.template
arduino/rf69/: rf69.ino
heltec-frisquet-serial/: platformio.ini
heltec-frisquet-serial/src/: main.cpp
src/: config.rs  main.rs
src/cmd/: area1.rs  data1.rs  data2.rs  data3.rs  data4.rs  date.rs  mod.rs  pair.rs  promiscuous.rs  run.rs  sensors.rs  sonde.rs
src/connect/: area.rs  boiler.rs  data1.rs  data2.rs  data3.rs  data4.rs  date.rs  holiday.rs  mod.rs  pair.rs  promiscuous.rs  sensors.rs  sonde.rs
src/datasource/: mod.rs
src/datasource/externaltemperature/: mod.rs
src/datasource/externaltemperature/homeassistant/: mod.rs
src/rf/: mod.rs
src/rf/mqtt/: mod.rs
src/rf/serial/: mod.rs
src/rf/test/: mod.rs
