[package]
name = "frisquet-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.4.11", features = ["derive"] }
paho-mqtt = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.2"
binascii = "0.1.4"
typetag = "0.2"
deku = "0.16.0"
hex = "0.4.3"
colored = "2.0.4"
toml = "0.8.8"
chrono = "0.4.31"
